# Financial-Assistant

./: .gitignore  .replit  AI_USAGE.md  BACKLOG.md  CLAUDE.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
attached_assets/: Pasted--Build-a-personal-finance-assistant-web-app-called-FinS_1783180604970.txt
services/rag-api/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
services/rag-api/infra/: app.py  cdk.json  rag_api_stack.py
services/rag-api/rag_api/: __init__.py  anthropic_client.py  auth.py  config.py  main.py  middleware.py  openai_client.py  query_parser.py  schemas.py  status_mapping.py
services/rag-api/rag_api/routes/: documents.py  health.py  query.py
services/rag-api/tests/: conftest.py  test_anthropic_client.py  test_auth.py  test_documents_routes.py  test_health.py  test_openai_client.py  test_query_parser.py  test_query_routes.py  test_upload_routes.py
services/rag-pipeline/: .env.example  .gitignore  README.md  pyproject.toml
services/rag-pipeline/rag_pipeline/: __init__.py  chunking.py  config.py  documents.py  embeddings.py  ingest.py  parsing.py  search.py  supabase_client.py
services/rag-pipeline/sample_data/: sample_transactions.csv
services/rag-pipeline/scripts/: generate_sample_pdf.py  test_ingest_and_query.py
services/rag-pipeline/sql/: 001_enable_pgvector.sql  002_create_documents_table.sql  003_create_document_chunks_table.sql  004_create_embedding_hnsw_index.sql  005_create_match_document_chunks_function.sql  006_enable_row_level_security.sql  007_add_user_scoping.sql  008_scope_match_document_chunks_by_user.sql  009_create_chat_messages_table.sql  010_add_chunk_text_fts_index.sql  011_create_match_document_chunks_hybrid_function.sql  012_add_hybrid_search_filters.sql
services/rag-pipeline/tests/: conftest.py  test_documents.py  test_ingest.py  test_parsing.py  test_search.py
(+115 files in other folders)
