[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-api"
version = "0.1.0"
description = "FastAPI HTTP service exposing the FinSight RAG pipeline (documents, upload, query) over HTTP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    # Local path dependency on the sibling rag-pipeline package. `{root:uri}`
    # is a Hatchling build-time context variable that expands to this
    # package's own directory as a file:// URI, so this resolves relative to
    # wherever the repo is checked out - no hardcoded absolute path needed.
    # Requires `[tool.hatch.metadata] allow-direct-references = true` below.
    "rag-pipeline @ {root:uri}/../rag-pipeline",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rag_api"]
