[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-pipeline"
version = "0.2.0"
description = "Standalone RAG document ingestion and retrieval pipeline for FinSight, backed by Supabase (pgvector) and OpenAI embeddings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "openai>=1.40.0",
    "supabase>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "fpdf2>=2.7.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_pipeline"]
